crates/math-core/tests/snapshots/error_test__undefined_label.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\eqref{a}"
---
Error: Found undefined label: "a".
   ╭─[ <input>:1:7 ]
   │
 1 │ \eqref{a}
   │       ─┬─  
   │        ╰─── label has not been previously defined
───╯
